--- a/work/conf/nginx.conf
+++ b/work/conf/nginx.conf
@@ -17,8 +17,9 @@ http {
         listen 8080;
 	    access_log logs/access.log main;
         # lua_code_cache off;
+        root html;
         location / {
-            index html;
+            index index.html;
             default_type application/x-ns-proxy-autoconfig;
             body_filter_by_lua_file lua/index.lua;
         }
