--- a/work/conf/nginx.conf
+++ b/work/conf/nginx.conf
@@ -21,6 +21,9 @@ http {
         location / {
             index index.html;
             default_type application/x-ns-proxy-autoconfig;
+        }
+
+        location ~ \.pac$ {
             header_filter_by_lua_block {ngx.header.content_length = nil}
             body_filter_by_lua_file lua/index.lua;
         }
